--- a/robotron-2000/css/style.css
+++ b/robotron-2000/css/style.css
@@ -21,6 +21,22 @@ body, input {
     font-family: 'Teko', sans-serif;
 }
 
+.flechaDireita{
+    width: 40px;
+    position: absolute;
+    left: 40%;
+    z-index: 100;
+    bottom: -10%;
+}
+.flechaEsquerda{
+    position: absolute;
+    left: 30%;
+    bottom: -10%;
+    z-index: 100;
+    width: 40px;
+    transform: rotate(180deg);
+}
+
 main {
     width: 80vw;
     height: 80vh;
@@ -63,6 +79,13 @@ main {
     clip-path: polygon(calc(100% - 30px) 0, 100% 30px, 100% calc(100% - 30px), calc(100% - 30px) 100%, 30px 100%, 0 calc(100% - 30px), 0 30px, 30px 0);
     border-left: 5px solid var(--main-cinza);
     height: 80%;
+}
+
+#paleta{
+
+    width:50px;
+    background-color: #000000;
+
 }
 
 /****************************** Equipamentos *****/
